# polaris

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  POLARIS_PYTHON_CONTEXT.md  README.md  railway.json  requirements.txt
.claude/commands/: commit.md  doc.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3f3fe973061e_initial_schema.py
backend/polaris/: config.py  database.py  main.py
backend/polaris/api/: tasks.py
backend/polaris/models/: base.py  task.py
backend/polaris/schemas/: task.py
docs/: FLUTTER_FRONTEND.md  FULLSTACK_INTEGRATION.md  POLARIS_DOGFOODING.md  POLARIS_QUICKSTART.md
flutter/: README.md  pubspec.yaml
flutter/android/app/: build.gradle.kts
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/com/rghsoftware/polaris/: MainActivity.kt
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/linux/: CMakeLists.txt
flutter/linux/runner/: my_application.cc
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc
